--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "babel-plugin-macros": "^3.1.0",
     "bootstrap": "^5.2.3",
     "next": "^13.1.6",
+    "nodemailer": "^6.9.1",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.0",
     "react-dom": "^18.2.0",
