--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "babel-plugin-macros": "^3.1.0",
     "bootstrap": "^5.3.0",
     "next": "^13.1.6",
+    "next-seo": "^6.4.0",
     "nodemailer": "^6.9.1",
     "react": "^18.2.0",
     "react-bootstrap": "^2.8.0",
